# world-cup-predictor

./: .gitignore  DATA_STATUS.md  PLAN.md  README.md  main.py  pyproject.toml  refresh_and_deploy.sh  vercel.json
data/: bracket_slots.csv  fair_play.csv  fixtures.csv  knockout_results.csv  market_odds.csv  ratings.csv  ratings_applied_matches.csv  ratings_source_notes.md  results.csv  teams.csv  third_place_permutations.csv  tournament_schedule.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: add_result.py  calibrate_rating_conversion.py  compare_market_model.py  export_backtest_2022.py  export_web_state.py  generate_backtest_2022_data.py  inspect-layout.mjs  publish_web_data.sh  run_scenario.py  setup_github_vercel_secrets.sh  setup_vercel_git.sh  sync_knockout_results.py  sync_results_from_espn.py  update_fair_play_from_espn.py  update_market_odds.py  update_ratings_from_elo.py  update_ratings_from_fifa.py  update_ratings_from_results.py  update_third_place_permutations.py  update_world_cup_data.py
src/: backtest_2022.py  bracket.py  espn_client.py  exports.py  fair_play.py  knockout.py  live_accuracy.py  market_comparison.py  market_odds.py  model_quality.py  movement.py  path_difficulty.py  ratings_update.py  reporting.py  scenario.py  scenario_report.py  simulator.py  standings.py  tiebreakers.py  tournament.py  tournament_context.py  validation.py  web_exports.py
tests/: conftest.py  test_app_state.py  test_app_state_integrity.py  test_backtest_2022.py  test_bracket.py  (+13 more)
(+89 files in other folders)
