[project]
name = "world-cup-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
